--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: Blog Alfiandar
-description: Blog belajar statis pakai GitHub Pages
+title: pianjuli
+logo: /assets/img/logo.png
+description: Halaman Blog Alfiandar Darwansyah
 theme: jekyll-theme-minimal
