--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ title: pianjuli
 logo: /assets/img/logo.png
 description: Halaman Blog Alfiandar Darwansyah
 theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
